# open-meteo-mcp

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  GITHUB_PUSH_GUIDE.md  QUICKSTART.md  README.md  demo.py  docker-compose.yml  push-to-github.bat  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  client.py  server.py
src/prompts/: __init__.py  weather_assistant.py
src/resources/: __init__.py  models.py  variables.py
src/tools/: __init__.py  air_quality.py  ensemble.py  forecast.py  geocoding.py  historical.py  marine.py  specialized.py  viz.py
tests/: __init__.py  conftest.py  test_client.py  test_server.py
tests/test_prompts/: __init__.py  test_prompts.py
tests/test_resources/: __init__.py  test_resources.py
tests/test_tools/: __init__.py  test_tools.py
