[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-meteo-mcp"
version = "0.1.0"
description = "MCP Server for Open-Meteo Weather API - Full API capability exposure"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "Open-Meteo MCP Contributors"}
]
keywords = [
    "mcp",
    "weather",
    "open-meteo",
    "forecast",
    "climate",
    "air-quality",
    "llm-tools"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
open-meteo-mcp = "src.server:main"

[project.urls]
Homepage = "https://github.com/open-meteo-mcp"
Documentation = "https://github.com/open-meteo-mcp/README.md"
Repository = "https://github.com/open-meteo-mcp/open-meteo-mcp"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
